<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">usTwo</string>
    <string name="action_settings">Settings</string>
    <string name="title_messaging">Messages</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_lists">Lists</string>
    <string name="title_media">Media</string>
    <string name="title_settings">Settings</string>
    <string name="editText_message">Type your message here…</string>
    <string name="button_send">&gt;</string>
    <string name="button_back">Back</string>
    <string name="button_create">Create</string>
    <string name="mqtt_topic_calendar">TOPIC_CALENDAR</string>
    <string name="mqtt_topic_lists">TOPIC_LISTS</string>
    <string name="mqtt_topic_messages">TOPIC_MESSAGES</string>
    <string name="mqtt_server">tcp://test.mosquitto.org:1883</string>
    <string name="user_name">Tucker</string>
    <string name="user_partner">Kelsey</string>
    <string name="fragment_calendar_id">calendar_fragment</string>
    <string name="fragment_messaging_id">messaging_fragment</string>
    <string name="fragment_lists_id">lists_fragment</string>
    <string name="button_prev_day">&lt;</string>
    <string name="button_next_day">&gt;</string>
    <string name="button_messaging_extras">&#43;</string>
    <string name="button_add_item">Add Item</string>
    <string name="textView_event_name">Name:</string>
    <string name="textView_event_date">Date:</string>
    <string name="textView_event_time">Time:</string>
    <string name="textView_event_location">Location:</string>
    <string name="textView_event_reminder">Reminder:</string>
    <string name="button_save">Save</string>
    <string name="empty"/>
    <string name="textView_blank_time">88:88 PM</string>
    <string name="editText_list_name_prompt">Enter list name...</string>
    <string name="textView_list_name">List name:</string>
    <string name="editText_list_item_prompt">Enter list item...</string>

</resources>
