<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/textView_listing_day"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:padding = "5dp"
        android:paddingTop = "10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/textView_event_date"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_toLeftOf="@+id/button_next_day"
        android:layout_toRightOf="@+id/button_previous_day"
        android:layout_width="wrap_content"/>
    
    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#eee9e9"
        android:dividerHeight="1dp"
        android:padding="5dp"
        android:clipToPadding="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/button_create_event"
        android:layout_below="@+id/textView_listing_day"
        android:layout_marginTop="5dp"/>

    <Button android:id="@+id/button_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_create"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_prev_day"
        android:id="@+id/button_previous_day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next_day"
        android:id="@+id/button_next_day"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        />

</RelativeLayout>
