<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_event_name"
        android:id="@+id/textView_event_name"
        android:singleLine="false"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_event_date"
        android:id="@+id/textView_event_date"
        android:singleLine="false"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_below="@+id/textView_event_name"
        android:layout_alignLeft="@+id/textView_event_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_event_time"
        android:id="@+id/textView_event_time"
        android:singleLine="false"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_below="@+id/textView_event_date"
        android:layout_alignLeft="@+id/textView_event_date"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_event_location"
        android:id="@+id/textView_event_location"
        android:singleLine="false"
        android:textStyle="bold"
        android:layout_below="@+id/textView_event_time"
        android:layout_alignLeft="@+id/textView_event_time"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_event_reminder"
        android:id="@+id/textView_event_reminder"
        android:singleLine="false"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView_event_location"
        android:layout_alignLeft="@+id/textView_event_location"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_event_name"
        android:inputType="text"
        android:layout_alignBottom="@+id/textView_event_name"
        android:layout_toRightOf="@+id/textView_event_reminder"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:inputType="date"
        android:id="@+id/datePicker_event_date"
        android:layout_alignLeft="@+id/editText_event_name"
        android:textColor="@android:color/primary_text_dark"
        android:layout_alignBottom="@+id/textView_event_date"
        android:layout_alignParentRight="true"
        android:layout_marginRight="105sp"
        android:editable="false"
        android:clickable="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:id="@+id/timePicker_event_time"
        android:layout_above="@+id/textView_event_location"
        android:layout_alignLeft="@+id/datePicker_event_date"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/textView_blank_time"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editText_event_location"
        android:layout_above="@+id/textView_event_reminder"
        android:layout_alignLeft="@+id/timePicker_event_time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_event_reminder"
        android:layout_alignLeft="@+id/editText_event_location"
        android:layout_below="@+id/editText_event_location"
        android:clickable="true"
        android:layout_marginTop="14dp"
        android:spinnerMode="dropdown"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/button_event_save"
        android:layout_marginBottom="30dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/button_back_to_event_listing"
        android:layout_alignTop="@+id/button_event_save"
        android:layout_toLeftOf="@+id/spinner_event_reminder"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_remove"
        android:id="@+id/button_remove_event"
        android:layout_alignTop="@+id/button_event_save"
        android:layout_toRightOf="@+id/timePicker_event_time"
        android:layout_marginLeft="19dp"
        android:visibility="invisible"
        android:enabled="false"/>

</RelativeLayout>