<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messaging_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsTwoHome"
    tools:ignore="MergeRootFrame" >

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="#eee9e9"
        android:dividerHeight="1dp"
        android:padding="45dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:clipToPadding="false"
        tools:ignore="InefficientWeight" />
    
    <LinearLayout
        android:id="@+id/sending_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/button_messaging_extras"
            android:id="@+id/button_messaging_extras"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"/>

        <EditText android:id="@+id/edittext_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="77sp"
            android:hint="@string/editText_message" />
    
        <Button android:id="@+id/send_button"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/button_send"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"/>
        
    </LinearLayout>

</LinearLayout>
