<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="469dp"
        android:id="@+id/expandableListView_list"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_item"
        android:id="@+id/button_add_item"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_add_item"
        android:layout_below="@+id/expandableListView_list">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_back_list"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="true"
            android:text="@string/button_back"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_add_item"
        android:layout_below="@+id/expandableListView_list">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:id="@+id/button_create_list"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>